--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -41,3 +41,8 @@ body {
         transform: rotate(360deg);
     }
 }
+
+.to-do-item .complete{
+    color: #dedede; 
+    text-decoration: line-through; 
+}
